--- a/scss/variables/_grid.scss
+++ b/scss/variables/_grid.scss
@@ -11,7 +11,7 @@ $container-max-widths: (
 );
 
 //Gutters
-$grid-gutter-width: 3.2rem;
+$grid-gutter-width: 32px;
 
 // Grid breakpoints
 $grid-breakpoints: (xs: 0,tablet: $tablet,desktop: $desktop);
