--- a/html-catalog/scss/qc-catalog-sdg.scss
+++ b/html-catalog/scss/qc-catalog-sdg.scss
@@ -7,16 +7,16 @@
   justify-content: flex-start;
   align-items: center;
   > div + div {
-    margin-left: $spacer-24;
+    margin-left: qc.spacer(lg);
   }
   & + & {
-    margin-top: $spacer-24;
+    margin-top: qc.spacer(lg);
   }
 }
 
 .color-sample {
-  width: $spacer-48;
-  height: $spacer-48;
+  width: qc.spacer(xxl-6);
+  height: qc.spacer(xxl-6);
   border-radius: 50%;
 }
 
@@ -25,7 +25,7 @@
 
   figure {
     width: 100%;
-    padding: $spacer-16 $spacer-24;
+    padding: qc.spacer(md) qc.spacer(lg);
     border-bottom: 1px solid qc.color("grey","pale");
 
     &:first-child {
@@ -36,7 +36,7 @@
       border-bottom: 0;
     }
     + figure {
-      margin-top: $spacer-24;
+      margin-top: qc.spacer(lg);
     }
   }
 }
@@ -49,16 +49,16 @@
 #grid-samples {
   position: relative;
   text-align: center;
-  margin-top: $spacer-48;
+  margin-top: qc.spacer(xxl-6);
 
   .qc-row {
-    margin-top: $spacer-24;
+    margin-top: qc.spacer(lg);
     > div > div {
       background-color: qc.color("blue","piv");
       opacity: .7;
       height: 100%;
       color: white;
-      padding: $spacer-8 0;
+      padding: qc.spacer(sm) 0;
     }
     &:first-child {
       margin-top: 0;
@@ -82,8 +82,8 @@
 
 .square-box {
   display: flex;
-  width: $spacer-120;
-  height: $spacer-120;
+  width: qc.spacer(xxl-15);
+  height: qc.spacer(xxl-15);
   justify-content: center;
   align-items: center;
 }
