--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -1,22 +1,23 @@
 @use "function/colors" as colors;
+@use "function/utils" as *;
 @use "variables" as *;
 @use "mixins/grid" as *;
 @use "mixins/link" as *;
-
+@use "mixins/typography" as *;
 
 :root{
-  font-size:62.5%;
+  font-size: #{$percent-root-font-size}#{"%"};
   body {
     @include content-font(16);
     font-family: $content-font;
-    color: $color-dark-blue;
+    color: colors.color("blue", "dark");
   }
 }
 
 h1, .qc-h1 {
-  @include header-font(49);
-  margin-top: $spacer-72;
-  margin-bottom: $spacer-32;
+  @include header-font(48);
+  margin-top: spacer(xxl-7);
+  margin-bottom: spacer(xl);
   @include media-tablet() {
     @include header-font(36);
   }
@@ -25,16 +26,16 @@ h1, .qc-h1 {
     content: "";
     display:block;
     margin: 0;
-    width:$spacer-48;
-    padding-top: $spacer-4;
-    border-bottom: 4px solid $color-pink;
+    width: spacer(xxl-6);
+    padding-top: spacer(xs);
+    border-bottom: 4px solid colors.color("accent","pink");
   }
 }
 
 h2, .qc-h2 {
   @include header-font(35);
-  margin-top: $spacer-48;
-  margin-bottom: $spacer-16;
+  margin-top: spacer(xxl-6);
+  margin-bottom: spacer(md);
   @include media-tablet(){
     @include header-font(29);
   }
@@ -42,25 +43,25 @@ h2, .qc-h2 {
 h3, .qc-h3 {
   @include header-font(28);
   font-weight:bold;
-  margin-top: $spacer-24;
-  margin-bottom: $spacer-16;
+  margin-top: spacer(lg);
+  margin-bottom: spacer(md);
   @include media-tablet(){
     @include header-font(25);
   }
 }
 h4, .qc-h4 {
   @include header-font(21);
-  margin-top: $spacer-24;
-  margin-bottom: $spacer-8;
+  margin-top: spacer(lg);
+  margin-bottom: spacer(sm);
 }
 h5,.qc-h5 {
   @include header-font(19);
-  margin-top: $spacer-16;
+  margin-top: spacer(md);
   margin-bottom: 0;
 }
 h6,.qc-h6 {
   @include header-font(16);
-  margin-top: $spacer-16;
+  margin-top: spacer(md);
   margin-bottom: 0;
 }
 
@@ -69,14 +70,14 @@ h6,.qc-h6 {
   + {
     h1,h2,h3,h4,h5,h6,
     .qc-h1,.qc-h2,.qc-h3,.qc-h4,.qc-h5,.qc-h6 {
-      margin-top: $spacer-16;
+      margin-top: spacer(md);
     }
   }
 }
 
 p {
   margin-top: 0;
-  margin-bottom: 2.4rem;
+  margin-bottom: spacer(lg);
 }
 
 img {
@@ -94,9 +95,9 @@ a {
   .external-link-tail {
     white-space: nowrap;
     img {
-      max-height: 1.1rem;
-      max-width: 1.1rem;
-      margin-bottom: .16rem;
+      max-height: rem(11);
+      max-width: rem(11);
+      margin-bottom: rem(1.6);
     }
   }
 }
