--- a/scss/_figure.scss
+++ b/scss/_figure.scss
@@ -1,15 +1,16 @@
 @use "function/colors" as *;
+@use "mixins/typography" as *;
 @import "variables";
 
 .qc-gallery {
   overflow: hidden;
-  margin-top: $spacer-8;
+  margin-top: spacer(sm);
 
   figure {
     display: table;
     margin: 0;
 
-    margin-bottom: $spacer-32;
+    margin-bottom: spacer(xl);
 
     img {
       max-width: 100%;
@@ -21,12 +22,12 @@
     display: table-caption;
     caption-side: bottom;
     background-color: #{color("grey","pale")};
-    padding: $spacer-8;
+    padding: spacer(sm);
     margin-bottom: 0;
-    margin-top: $spacer-8;
+    margin-top: spacer(sm);
 
     p {
-      line-height: $spacer-24;
+      line-height: spacer(lg);
       margin-bottom: 0;
     }
   }
