--- a/scss/function/_map.scss
+++ b/scss/function/_map.scss
@@ -1,12 +1,13 @@
 @use "sass:map" as map;
 
-@function next-in-map($index, $map) {
+@function next-key-in-map($index, $map) {
   $fallback: 0;
+  // @debug $index;
   @each $level,$line-height in $map {
     @if $level >= $index {
-      @return map.get($map, $level);
+      @return $level;
     }
     $fallback: $level;
   }
-  @return map.get($map, $fallback)
+  @return $fallback;
 }
