--- a/scss/variables/_shadings.scss
+++ b/scss/variables/_shadings.scss
@@ -1,3 +1,3 @@
-$shading-color : rgba($color-dark-blue, .24);
+$shading-color : rgba($color-blue-dark, .24);
 $shadings-settings: (1:4, 2:8, 3:16, 4:24); // <y offset> : <blur spread> in pixel
 
