--- a/scss/variables/_typography.scss
+++ b/scss/variables/_typography.scss
@@ -13,15 +13,11 @@ $content-font: $font-open-sans;
 $header-font: $font-roboto;
 
 // QC Font Weight
-$font-weight-300: 300;
-$font-weight-lighter: lighter;
-$font-weight-normal: normal;
-$font-weight-500: 500;
-$font-weight-600: 600;
-$font-weight-bold: bold;
-$font-weight-800: 800;
-$font-weight-900: 900;
-$font-weight-bolder: bolder;
+$font-weight-regular : 400;
+$roboto-font-weight-medium : 500;
+$open-sans-font-weight-semi-bold : 600;
+$font-weight-bold : 700;
+
 
 // Font sizes and line height associations
 // … for content
