--- a/scss/_figure.scss
+++ b/scss/_figure.scss
@@ -9,9 +9,7 @@
 
   figure {
     display: table;
-    margin: 0;
-
-    margin-bottom: spacer(xl);
+    margin: 0 0 spacer(xl) 0;
 
     img {
       max-width: 100%;
