--- a/html-catalog/scss/qc-catalog-sdg.css
+++ b/html-catalog/scss/qc-catalog-sdg.css
@@ -4,10 +4,10 @@
   align-items: center;
 }
 .color-details > div + div {
-  margin-left: 2.4rem;
+  margin-left: 4.8rem;
 }
 .color-details + .color-details {
-  margin-top: 2.4rem;
+  margin-top: 4.8rem;
 }
 
 .color-sample {
@@ -21,7 +21,7 @@
 }
 .title-samples figure {
   width: 100%;
-  padding: 1.6rem 2.4rem;
+  padding: 2.4rem 4.8rem;
   border-bottom: 1px solid var(--qc-pale-grey);
 }
 .title-samples figure:first-child {
@@ -32,7 +32,7 @@
   border-bottom: 0;
 }
 .title-samples figure + figure {
-  margin-top: 2.4rem;
+  margin-top: 4.8rem;
 }
 
 .font-titles {
@@ -45,14 +45,14 @@
   margin-top: 4.8rem;
 }
 #grid-samples .qc-row {
-  margin-top: 2.4rem;
+  margin-top: 4.8rem;
 }
 #grid-samples .qc-row > div > div {
   background-color: var(--qc-piv-blue);
   opacity: 0.7;
   height: 100%;
   color: white;
-  padding: 0.8rem 0;
+  padding: 1.6rem 0;
 }
 #grid-samples .qc-row:first-child {
   margin-top: 0;
@@ -78,6 +78,9 @@
   height: 12rem;
   justify-content: center;
   align-items: center;
+}
+.square-box.qc-shading-0 {
+  border: 1px solid var(--qc-pale-blue);
 }
 
 a.pseudo-hover {
