--- a/scss/variables/_spacing.scss
+++ b/scss/variables/_spacing.scss
@@ -3,19 +3,10 @@
 //---------------
 $base-spacer: 8 !default;
 $spacers: (
-  xs: .5 ,
-  sm: 1,
-  md: 2 ,
-  lg: 3 ,
-  xl: 4 ,
-  xxl-5: 5 ,
-  xxl-6: 6 ,
-  xxl-7: 7 ,
-  xxl-8: 8 ,
-  xxl-9: 9 ,
-  xxl-10: 10 ,
-  xxl-12: 12 ,
-  xxl-15: 15 ,
+  sm: 2,
+  md: 3 ,
+  lg: 6 ,
+  xl: 12
 );
 
 
